--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
     "default": "laborless-6d04f",
-    "staging": "laborless-6d04f"
+    "staging": "laborless-6d04f",
+    "staging02": "laborless-6d04f"
   }
 }
