Revert "Student Categories Modifications"
This reverts commit 9ef7aad654b775741e9873d6954b779e8f0db4cd.

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,6 @@
 {
   "projects": {
     "default": "laborless-6d04f",
-    "staging": "laborless-6d04f",
-    "staging02": "laborless-6d04f"
+    "staging": "laborless-6d04f"
   }
 }
